# civic-media-scout

./: .gitignore  README.md  data.json  index.html  pyproject.toml  script.js  style.css
.github/: dependabot.yml
.github/workflows/: build.yml
civic_media_scout/: base_urls.txt  civic_media_scout.py  find_base_domains.py  html_generator.py  json_merge.py  json_split.py
public/domains/: aai.aero.json  aaib.gov.in.json  aau.ac.in.json  aau.in.json  abc.gov.in.json  acabcmis.gov.in.json  acbmaharashtra.gov.in.json  actrec.gov.in.json  adaamritsar.gov.in.json  addaonline.in.json  admissions.nic.in.json  aees.gov.in.json  aegcl.co.in.json  aepcindia.com.json  aerb.gov.in.json  affdf.gov.in.json  afmc.nic.in.json  agarmalwa.nic.in.json  agra.nic.in.json  agriculturemizoram.nic.in.json  agriharyana.gov.in.json  agrimachinery.nic.in.json  agriwelfare.gov.in.json  ahmedabad.nic.in.json  ahrc.gov.in.json  aicl.in.json  aicte-india.org.json  aicte.gov.in.json  aiia.gov.in.json  aiihph.gov.in.json  aiims.edu.json  aiimsbhopal.edu.in.json  aiimsbibinagar.edu.in.json  aiimspatna.edu.in.json  aiimsrajkot.edu.in.json  aiimsrishikesh.edu.in.json  aiishmysore.in.json  aim.gov.in.json  aimguwahati.edu.in.json  aipmstsecondary.co.in.json  (+2997 more)
