[tool.poetry]
name = "civic-media-scout"
version = "0.2.0"
description = ""
authors = ["navchandar <12165092+navchandar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "civic_media_scout"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tldextract = "^5.0.0"
aiohttp = "^3.12.14"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
